# ai-ready

./: .gitignore  CLAUDE.md  pyproject.toml
.dev/: README.md
.dev/prompts/: macos-build-test.md
.dev/scripts/: build-all.sh
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/decisions/: ADR-0001-docs-first-workflow.md  ADR-0002-tech-stack.md  ADR-0003-layered-core-architecture.md  ADR-0004-windows-bat-first.md  ADR-0005-macos-gatekeeper-strategy.md  ADR-0006-permanent-path-setup.md  ADR-0007-universal-prerequisites.md  ADR-0008-windows-installer-lessons.md  ADR-0009-remove-doctor-step.md  ADR-0010-cli-handoff-onboarding.md  ADR-0011-pyinstaller-onedir-macos.md
docs/glossary/: aiready.md  claude-code.md  native-installer.md  onboarding-modes.md  openclaw.md  platform-interface.md  step.md  target-user.md  tool-interface.md
docs/plans/: 2026-03-22-aiready-implementation.md
docs/specs/: 2026-03-22-aiready-design.md  2026-03-22-aiready-requirements.md  2026-03-24-testing-guide.md  2026-03-25-virtualbox-test-setup.md
docs/website/: index.html  style.css
scripts/linux/: AIReady-ClaudeCode.sh  AIReady-OpenClaw.sh
scripts/macos/: AIReady-ClaudeCode.sh  AIReady-OpenClaw.sh
scripts/windows/: AIReady-ClaudeCode.bat  AIReady-ClaudeCode.ps1  AIReady-OpenClaw.bat  AIReady-OpenClaw.ps1
src/aiready/: __init__.py  main.py
src/aiready/core/: downloader.py  installer.py  logger.py  models.py  path_manager.py  permissions.py  prereqs.py  process.py  validator.py  version.py
tests/integration/: test_install_flow.py
tests/scripts/: test_script_lint.py
(+32 files in other folders)
