[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiready"
version = "0.1.0"
requires-python = ">=3.12"
description = "Cross-platform installer helper for AI coding tools"
dependencies = [
    "customtkinter>=5.2",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["aiready"]
omit = [
    "*/gui/*",
    "*/main.py",
]

[tool.coverage.report]
fail_under = 80
